test/sema/generics/generic_struct_inference_multiple_params_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S<T, U> { x: T, y: T, z: U }

fn main(): unit {
  // CHECK: [[# @LINE + 2 ]]:24: error: a field of type 'number' cannot be initialized with an expression of type '() -> unit'
  // CHECK: [[# @LINE + 1 ]]:13: error: field 'y' is not initialized
  let s = S { x: 1, y: main, z: 3 };
}

// CHECK-NOT: {{.*error.*}}
